@@ -12,6 +12,8 @@ FBINTF Change Log  version                                      (1.0-1) Tue, 06 
    Firebird if the space allocated is not enough to allow for transliteration, even
    though it is not required for character set none.
 
+5. IBUtils: List of reserved words brought up-to-date
+
 FBINTF Change Log  version                                      (1.0-0) Tue, 06 Dec 2016 10:33:47 +0000
 
 1. Initial Release
